--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,6 @@ html{
     background: black;
     color: white
     }
+ @media only screen and (max-width: 600px) {
+            section {
+                padding: 10px;
